--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -7,6 +7,8 @@ on:
     workflows: ["Test", "Chromatic"]
     types:
       - completed
+    branches:
+      - ${{ github.head_ref }}
 
 jobs:
   prerelease:
