--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -30,9 +30,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           checkName: "test"
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          timeoutSeconds: 1800
+          intervalSeconds: 30
       - name: "Tests failed - exit"
-        if: steps.wait-for-tests.outputs.conclusion == 'failure'
-        run: exit 1
+        if: steps.wait-for-tests.outputs.conclusion != 'success'
+        run: |
+          echo "::error test check failed - prerelease cancelled"
+          exit 1
       - name: Create Updated version
         if: success()
         env:
@@ -51,7 +55,7 @@ jobs:
           prerelease: true
           automatic_release_tag: prerelease
       - name: Create comment
-        if: success()
+        if: always()
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
