--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,28 +24,32 @@ jobs:
           git config --global user.name 'ci'
           git config --global user.email 'deploy@monday.com'
       - name: "Wait for tests to succeed"
+        if: false
         uses: fountainhead/action-wait-for-check@v1.1.0
         id: wait-for-tests
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           checkName: "test"
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          timeoutSeconds: 1800
-          intervalSeconds: 30
+          timeoutSeconds: 1200
+          intervalSeconds: 20
       - name: "Tests failed - exit"
-        if: steps.wait-for-tests.outputs.conclusion != 'success'
+        if: false && steps.wait-for-tests.outputs.conclusion != 'success'
         run: |
           echo "::error::test check failed - prerelease cancelled"
           exit 1
       - name: Create Updated version
+        id: create-update-version
         if: success()
         env:
           BRANCH_NAME: ${{ github.head_ref }}
-        run: npm run prerelease -- --branch-name=$BRANCH_NAME
+        run: |
+          echo "package_version=$(node ./scripts/prerelease.js)" >> GITHUB_OUTPUT
       - name: Publish the new version to npm
         if: success()
         run: | # Compare the latest version and the current version and publish only if the version changed
-          if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
+          echo "# Publish the new version to npm. package_version = ${{ steps.create-update-version..outputs.package_version }} "
+          if [ $(npm view monday-ui-react-core version) != ${{ steps.create-update-version..outputs.package_version }} ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - uses: "marvinpinto/action-automatic-releases@latest"
@@ -64,3 +68,4 @@ jobs:
           comment-author: "github-actions[bot]"
           body: |
             Prerelease version published!
+          reactions: rocket
