--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Publish the new version to npm
         if: success()
         run: | # Compare the latest version and the current version and publish only if the version changed
-          echo "# Publish the new version to npm. package_version = ${{ steps.create-update-version..outputs.package_version }} "
-          if [ $(npm view monday-ui-react-core version) != ${{ steps.create-update-version..outputs.package_version }} ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
+          echo "# Publish the new version to npm. package_version = ${{ steps.create-update-version.outputs.package_version }} "
+          if [ $(npm view monday-ui-react-core version) != ${{ steps.create-update-version.outputs.package_version }} ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - uses: "marvinpinto/action-automatic-releases@latest"
