--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -40,14 +40,12 @@ jobs:
       - name: Create Updated version
         id: create-update-version
         if: success()
-        env:
-          BRANCH_NAME: ${{ github.head_ref }}
         run: |
-          echo "package_version=$(node ./scripts/prerelease.js)" >> $GITHUB_OUTPUT
+          echo "package_version=$(BRANCH_NAME=${{ github.head_ref }} node ./scripts/prerelease.js)" >> $GITHUB_OUTPUT
       - name: Publish the new version to npm
         if: success()
         run: | # Compare the latest version and the current version and publish only if the version changed
-          echo "# Publish the new version to npm. package_version = ${{ steps.create-update-version.outputs.package_version }} "
+          echo "# Publish the new version to npm. package_version='${{ steps.create-update-version.outputs.package_version }}'"
           if [ $(npm view monday-ui-react-core version) != ${{ steps.create-update-version.outputs.package_version }} ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
