--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -44,7 +44,8 @@ jobs:
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
-          package_version=$(BRANCH_NAME=$BRANCH_NAME node ./scripts/prerelease.js)
+          package_version=$(BRANCH_NAME='$BRANCH_NAME' node ./scripts/prerelease.js)
+          echo "package_version=$package_version"
           echo "package_version=$package_version" >> $GITHUB_OUTPUT
       - name: Publish the new version to npm
         if: success()
