--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -42,9 +42,9 @@ jobs:
         id: create-update-version
         if: success()
         env:
-          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+          GIT_BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
-          package_version=$(BRANCH_NAME='$BRANCH_NAME' node ./scripts/prerelease.js)
+          package_version=$(BRANCH_NAME=${{ GIT_BRANCH_NAME }} node ./scripts/prerelease.js)
           echo "package_version=$package_version"
           echo "package_version=$package_version" >> $GITHUB_OUTPUT
       - name: Publish the new version to npm
@@ -61,13 +61,13 @@ jobs:
           prerelease: true
           automatic_release_tag: prerelease
       - name: print PR number
+        if: always()
         run: echo "#PR number = ${{ github.event.pull_request.number }}"
       - name: Create comment
         if: always()
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
-          comment-author: "github-actions[bot]"
           body: |
             Prerelease version published!
           reactions: rocket
