--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Create Updated version
         if: success()
         env:
-          BRANCH_NAME: ${{ github.head_ref }}
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: npm run prerelease -- --branch-name=$BRANCH_NAME
       - name: Publish the new version to npm
         if: success()
