--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -42,7 +42,10 @@ jobs:
         if: success()
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-        run: npm run prerelease -- --branch-name=$BRANCH_NAME
+        run: |
+          npm run prerelease -- --branch-name=$BRANCH_NAME
+          echo "package_version=$(node -e "console.log(require('./package.json').version)")"
+          echo "package_version=$(node -e "console.log(require('./package.json').version)")" >> $GITHUB_OUTPUT
       - name: Publish the new version to npm
         if: success()
         run: | # Compare the latest version and the current version and publish only if the version changed
@@ -55,3 +58,5 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           automatic_release_tag: prerelease
+      - name: print PR number
+        run: echo "#PR number = ${{ github.event.pull_request.number }}"
