--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -23,6 +23,8 @@ jobs:
         run: |
           git config --global user.name 'ci'
           git config --global user.email 'deploy@monday.com'
+      - name: print PR number
+        run: echo "#PR number = ${{ github.event.pull_request.number }}"
       - name: "Wait for tests to succeed"
         uses: fountainhead/action-wait-for-check@v1.1.0
         if: false
@@ -42,9 +44,9 @@ jobs:
         if: success()
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+          COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
         run: |
-          npm run prerelease -- --branch-name=$BRANCH_NAME
-          echo "package_version=$(node -e "console.log(require('./package.json').version)")"
+          npm run prerelease
           echo "package_version=$(node -e "console.log(require('./package.json').version)")" >> $GITHUB_OUTPUT
       - name: Publish the new version to npm
         if: success()
@@ -58,5 +60,3 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           automatic_release_tag: prerelease
-      - name: print PR number
-        run: echo "#PR number = ${{ github.event.pull_request.number }}"
