--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,7 +24,14 @@ jobs:
           git config --global user.name 'ci'
           git config --global user.email 'deploy@monday.com'
       - name: print PR number
-        run: echo "#PR number = ${{ github.event.pull_request.number }}"
+        with:
+          PR_A: ${{github.event.pull_request.number}}
+          PR_B: ${{github.event.number}}
+          PR_C: ${{github.event.issue.number}}
+          run: |
+            echo "$PR_A"
+            echo "$PR_B"
+            echo "$PR_C"
       - name: "Wait for tests to succeed"
         uses: fountainhead/action-wait-for-check@v1.1.0
         if: false
