--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -25,10 +25,14 @@ jobs:
           git config --global user.email 'deploy@monday.com'
       - name: print PR number
         if: always()
-        with:
+        env:
           PR_A: ${{github.event.pull_request.number}}
+          PR_B: ${{github.event.number}}
+          PR_C: ${{github.event.issue.number}}
         run: |
           echo "$PR_A"
+          echo "$PR_B"
+          echo "$PR_C"
       - name: "Wait for tests to succeed"
         uses: fountainhead/action-wait-for-check@v1.1.0
         if: false
