--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -23,15 +23,6 @@ jobs:
         run: |
           git config --global user.name 'ci'
           git config --global user.email 'deploy@monday.com'
-      - name: print PR number
-        with:
-          PR_A: ${{github.event.pull_request.number}}
-          PR_B: ${{github.event.number}}
-          PR_C: ${{github.event.issue.number}}
-        run: |
-          echo "$PR_A"
-          echo "$PR_B"
-          echo "$PR_C"
       - name: "Wait for tests to succeed"
         uses: fountainhead/action-wait-for-check@v1.1.0
         if: false
@@ -48,6 +39,7 @@ jobs:
           echo "::error::test check failed - prerelease cancelled"
           exit 1
       - name: Create Updated version
+        id: create-update-version
         if: success()
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
@@ -58,7 +50,7 @@ jobs:
       - name: Publish the new version to npm
         if: success()
         run: | # Compare the latest version and the current version and publish only if the version changed
-          if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
+          if [ $(npm view monday-ui-react-core version) != ${{ steps.create-update-version.outputs.package_version }} ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - uses: "marvinpinto/action-automatic-releases@latest"
@@ -67,3 +59,13 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           automatic_release_tag: prerelease
+      - uses: 8BitJonny/gh-get-current-pr@2.2.0
+        id: PR
+        if: success()
+      - name: Create comment
+        if: success()
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          issue-number: ${{ steps.PR.outputs.number }}
+          body: |
+            Prerelease version published: `${{ steps.PR.outputs.number }}`
