--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -15,7 +15,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: ".nvmrc"
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
         run: npm ci
@@ -25,7 +25,7 @@ jobs:
           git config --global user.email 'deploy@monday.com'
       - name: "Wait for tests to succeed"
         uses: fountainhead/action-wait-for-check@v1.1.0
-        if: false
+        if: success()
         id: wait-for-tests
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -34,7 +34,7 @@ jobs:
           timeoutSeconds: 1200
           intervalSeconds: 20
       - name: "Tests failed - exit"
-        if: false && steps.wait-for-tests.outputs.conclusion != 'success'
+        if: steps.wait-for-tests.outputs.conclusion != 'success'
         run: |
           echo "::error::test check failed - prerelease cancelled"
           exit 1
@@ -49,8 +49,7 @@ jobs:
           echo "package_version=$(node -e "console.log(require('./package.json').version)")" >> $GITHUB_OUTPUT
       - name: Publish the new version to npm
         if: success()
-        run: | # Compare the latest version and the current version and publish only if the version changed
-          if [ $(npm view monday-ui-react-core version) != ${{ steps.create-update-version.outputs.package_version }} ]; then npm run build && npm publish --tag prerelease; else echo ''; fi;
+        run: npm run build && npm publish --tag prerelease
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - uses: "marvinpinto/action-automatic-releases@latest"
@@ -69,4 +68,8 @@ jobs:
         with:
           issue-number: ${{ steps.PR.outputs.number }}
           body: |
-            Prerelease version published: `${{ steps.create-update-version.outputs.package_version }}`
+            A new prerelease version of this PR has been published: `${{ steps.create-update-version.outputs.package_version }}`
+            To install this prerelease version using npm, please run the following command in your terminal:
+            `npm i monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}`
+            If you prefer using Yarn, you can use the following command instead:
+            `yarn add monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}`
