--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -15,7 +15,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - uses: actions/setup-node@v1
         with:
-          node-version: ".nvmrc"
+          node-version-file: ".nvmrc"
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies
         run: npm ci
