last commit in this pr [prerelease]

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -69,7 +69,10 @@ jobs:
           issue-number: ${{ steps.PR.outputs.number }}
           body: |
             A new prerelease version of this PR has been published: `${{ steps.create-update-version.outputs.package_version }}`
-            To install this prerelease version using npm, please run the following command in your terminal:
-            `npm i monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}`
-            If you prefer using Yarn, you can use the following command instead:
-            `yarn add monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}`
+            
+            ```
+            // To install this prerelease version using npm, please run the following command in your terminal:
+            npm i monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}
+            // If you prefer using Yarn, you can use the following command instead:
+            yarn add monday-ui-react-core@${{ steps.create-update-version.outputs.package_version }}
+            ```
