--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   prerelease:
-    if: "contains(github.event.head_commit.message, '[prerelease]')"
+    if: "github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[prerelease]')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -53,7 +53,7 @@ jobs:
         if: success()
         run: npm run build && npm publish --tag prerelease
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
       - uses: "marvinpinto/action-automatic-releases@latest"
         if: success()
         with:
