[prerelease] css-modules names testing

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:coverage": "npm run test -- --coverage",
     "start": "npm run build:react-icons && npm run build:commonjs -- --watch",
     "build": "npm run build:react-icons && npm run build:storybook-exports && npm run build:commonjs && npm run build:esm && npm run build:types",
+    "cut_build": "npm run build:commonjs && npm run build:esm && npm run build:types",
     "build:exports": "./scripts/build-exports.js",
     "build:types": "./scripts/build-types.js",
     "build:storybook-exports": "./scripts/build-storybook-exports.js",
