--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "build:esm": "rollup -c",
     "build:esm:mock-classnames": "mock_classnames=on rollup -c",
     "build:react-icons": "svg2react-icon --typescript --keep-colors node_modules/monday-ui-style/src/Icons src/components/Icon/Icons",
-    "storybook": "storybook=true start-storybook -p 7007",
-    "build-storybook": "storybook=true build-storybook",
-    "deploy-storybook": "storybook-to-ghpages",
+    "storybook": "NODE_OPTIONS=--openssl-legacy-provider storybook=true start-storybook -p 7007",
+    "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider storybook=true build-storybook",
+    "deploy-storybook": "NODE_OPTIONS=--openssl-legacy-provider storybook-to-ghpages",
     "link-local": "npm link && npm start",
     "plop": "plop",
     "add-ref-to-icons": "node ./scripts/add-forward-ref-icons.js",
