--- a/.github/workflows/release-deprecated.yml
+++ b/.github/workflows/release-deprecated.yml
@@ -30,7 +30,7 @@ jobs:
           git push --follow-tags
       - name: Publish the new version to npm
         run: | # Compare the latest version and the current version and publish only if the version changed
-          if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish; else echo ''; fi;
+          if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish --tag deprecated; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - uses: "marvinpinto/action-automatic-releases@latest"
