--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -1,4 +1,4 @@
-name: Release new *deprecated* version
+name: Release new v1 version
 
 on: workflow_dispatch
 
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: deprecated
+          ref: v1
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
@@ -30,11 +30,11 @@ jobs:
           git push --follow-tags
       - name: Publish the new version to npm
         run: | # Compare the latest version and the current version and publish only if the version changed
-          if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish --tag deprecated; else echo ''; fi;
+          if [ $(npm view monday-ui-react-core version) != $(node -e "console.log(require('./package.json').version)") ]; then npm run build && npm publish --tag v1; else echo ''; fi;
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
-          automatic_release_tag: deprecated
+          automatic_release_tag: v1
