--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "monday-ui-react-core",
-  "version": "5.0.0",
+  "name": "vibe-test",
+  "version": "1.0.0",
   "description": "Official monday.com UI resources for application development in React.js",
   "main": "./dist/main.js",
   "types": "./dist/types.d.ts",
