--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,9 @@ jobs:
         run: npm run release
         env:
           GITHUB_AUTH: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set package version variable
+        run: echo "package_version=$(node -e "console.log(require('./package.json').version)")" >> "$GITHUB_ENV"
       - name: Commit and push changes
         run: |
           git add .
-          echo "package_version=$(node -e "console.log(require('./package.json').version)")" >> "$GITHUB_ENV"
           echo "Release version ${{ env.package_version }}"
