--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,4 +28,15 @@ jobs:
       - name: Commit and push changes
         run: |
           git add .
-          echo "Release version ${{ env.package_version }}"
+          git commit -m "Release version ${{ env.package_version }}"
+          git push --follow-tags
+      - name: Publish the new version to npm
+        run: | # Compare the latest version and the current version and publish only if the version changed
+          if [ $(npm view monday-ui-react-core version) != ${{ env.package_version }} ]; then npm run build && npm publish; else echo ''; fi;
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          automatic_release_tag: latest
