Internal: release-v1.yml rename v1 branch

--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: v1
+          ref: version1
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
