--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: version1
+          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
