--- a/.github/workflows/update-icons.yml
+++ b/.github/workflows/update-icons.yml
@@ -54,17 +54,17 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: Update version
+          commit-message: "Update icons - monday-ui-style ${{ env.LATEST_VERSION }}"
           committer: Monday Style <mondaystyle@monday.com>
           author: Monday Style <mondaystyle@monday.com>
           branch: update-version/style-version-${{env.LATEST_VERSION}}
-          title: "Upgrade icons"
+          title: "Update icons - monday-ui-style ${{ env.LATEST_VERSION }}"
           body: |
             New icons version
           labels: |
             PR: Icon 💎
-          assignees: orrgottlieb
-          reviewers: orrgottlieb
+          assignees: sergeyroyt
+          reviewers: sergeyroyt
           team-reviewers: |
             owners
             maintainers
